--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,118 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: 203, 100%, 34%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 203, 100%, 34%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 203, 100%, 34%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 203, 100%, 34%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* @layer base {
+  :root {
+    --background: 204 100% 97%;
+    --foreground: 207 82% 16%;
+    --card: 204 100% 97%;
+    --card-foreground: 207 82% 16%;
+    --popover: 204 100% 97%;
+    --popover-foreground: 207 82% 16%;
+    --primary: 203, 100%, 34%;
+    --primary-foreground: 204 100% 97%;
+    --secondary: 204 98% 86%;
+    --secondary-foreground: 207 82% 16%;
+    --muted: 204 100% 94%;
+    --muted-foreground: 203 100% 34%;
+    --accent: 200 97% 74%;
+    --accent-foreground: 207 82% 16%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 204 100% 97%;
+    --border: 204 98% 86%;
+    --input: 204 98% 86%;
+    --ring: 203, 100%, 34%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 207 82% 16%;
+    --foreground: 204 100% 97%;
+    --card: 207 82% 16%;
+    --card-foreground: 204 100% 97%;
+    --popover: 207 82% 16%;
+    --popover-foreground: 204 100% 97%;
+    --primary: 203, 100%, 34%;
+    --primary-foreground: 204 100% 97%;
+    --secondary: 204 93% 27%;
+    --secondary-foreground: 204 100% 97%;
+    --muted: 205 75% 24%;
+    --muted-foreground: 200 97% 74%;
+    --accent: 203 100% 40%;
+    --accent-foreground: 204 100% 97%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 204 100% 97%;
+    --border: 204 93% 27%;
+    --input: 204 93% 27%;
+    --ring: 203, 100%, 34%;
+  }
+} */
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
